--- a/Phimy/app/src/main/res/values/strings.xml
+++ b/Phimy/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="title_activity_phimy_preference">PhimyPreferenceActivity</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_hint">Buscar</string>
     <string name="shareString">Share</string>
     <color name="background">#FF0000</color>
 </resources>
